<resources>
    <string name="app_name">LRS</string>
    <string name="Title">LRS</string>
    <string name="Search">검색창</string>
    <string name="star">즐겨찾기</string>
    <string name="star_image">즐겨찾는이미지</string>
    <string name="StringValue">이미지</string>
    <string name="login">로그인</string>
    <string name="loginout">로그아웃</string>
    <string name="sign">회원가입</string>
    <string name="write">글쓰기</string>
    <string name="comm">커뮤니티</string>
    <string name="name">이름</string>
    <string name="password">비밀번호</string>
    <string name="passwordconfirm">비밀번호 확인</string>
    <string name="email">이메일</string>
    <string name="phone">연락처</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="rewrite">다시입력</string>
    <string name="cancel">취소</string>
    <string name="wrtie_list">작성된 글</string>
    <string name="ok">확인</string>
    <string name="champion">챔피언</string>
    <string name="ranking">랭킹</string>
    <string name="id">아이디</string>
    <string name="reset_pw">비밀번호 재설정</string>
    <string name="new_pw">새 비밀번호</string>
    <string name="pw_ok">비밀번호 확인</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_id">id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_test1">test1</string>
    <string name="title_search">검색</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom">bottom</string>
    <string name="title_home">Home</string>


</resources>
