<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reset_pw">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="64dp"
        android:text="@string/reset_pw"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editText10"
        app:layout_constraintEnd_toEndOf="@+id/editText10" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/new_pw"
        app:layout_constraintBottom_toTopOf="@+id/editText11"
        app:layout_constraintEnd_toEndOf="@+id/button13"
        app:layout_constraintStart_toStartOf="@+id/editText11" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="241dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pw_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:text="@string/ok"
        app:layout_constraintBaseline_toBaselineOf="@+id/button13"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="43dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/editText11" />

</androidx.constraintlayout.widget.ConstraintLayout>