<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="652dp">

                <EditText
                    android:id="@+id/sign_pwconfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="41dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="@+id/sign_phone"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/sign_phone"
                    app:layout_constraintTop_toBottomOf="@+id/sign_id" />

                <EditText
                    android:id="@+id/sign_pw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="41dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/passwordconfirm"
                    android:inputType="textPassword"
                    app:layout_constraintStart_toStartOf="@+id/sign_phone"
                    app:layout_constraintTop_toBottomOf="@+id/sign_pwconfirm" />

                <EditText
                    android:id="@+id/sign_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@+id/sign_id"
                    app:layout_constraintStart_toStartOf="@+id/sign_id"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <EditText
                    android:id="@+id/sign_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="35dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintBottom_toTopOf="@+id/button5"
                    app:layout_constraintStart_toStartOf="@+id/button5" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="89dp"
                    android:layout_height="43dp"
                    android:background="@drawable/rounded_border_button"
                    android:text="@string/cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/sign_email" />

                <EditText
                    android:id="@+id/sign_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="41dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/id"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="@+id/sign_pw"
                    app:layout_constraintStart_toStartOf="@+id/sign_pw"
                    app:layout_constraintTop_toBottomOf="@+id/sign_name" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/sign"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="@+id/sign_name"
                    app:layout_constraintStart_toStartOf="@+id/sign_name"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="92dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="52dp"
                    android:layout_marginLeft="52dp"
                    android:background="@drawable/rounded_border_button"
                    android:text="@string/sign"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/sign_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    app:layout_constraintEnd_toEndOf="@+id/sign_email"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/sign_email"
                    app:layout_constraintTop_toBottomOf="@+id/sign_pw" />

                <Button
                    android:id="@+id/button24"
                    android:layout_width="78dp"
                    android:layout_height="39dp"
                    android:background="@drawable/id_check"
                    android:text="중복확인"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/sign_id"
                    app:layout_constraintTop_toTopOf="@+id/sign_id" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>